<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.oracle.metrojpms</groupId>
    <artifactId>jaxb-ri-client</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Client using JAXB runtime/impl dependency</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>


    <repositories>
        <repository>
            <id>releases.java.net</id>
            <url>http://maven.java.net/content/repositories/releases/</url>
            <layout>default</layout>
        </repository>
        <repository>
            <id>jvnet-nexus-staging</id>
            <url>http://maven.java.net/content/repositories/staging/</url>
            <layout>default</layout>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-ri</artifactId>
            <version>2.4.0-b180608.0325</version>
            <type>zip</type>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.3.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.0.2</version>
                <executions>
                    <execution>
                        <id>unpack-jaxb</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>unpack-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeGroupIds>com.sun.xml.bind</includeGroupIds>
                            <includeArtifactIds>jaxb-ri</includeArtifactIds>
                            <outputDirectory>
                                ${project.build.directory}/mods
                            </outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>9</source>
                    <target>9</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>false</addClasspath>
                            <mainClass>
                                com.oracle.jaxb.riclient.App
                            </mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>runtime</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>--class-path</argument>
                                <argument>${project.build.directory}/classes</argument>
                                <argument>--upgrade-module-path</argument>
                                <argument>${project.build.directory}/mods/jaxb-ri/mod/jaxb-api.jar</argument>
                                <argument>--module-path</argument>
                                <argument>${project.build.directory}/mods/jaxb-ri/mod:${project.build.directory}/mods/jaxb-ri/lib</argument>
                                <argument>--add-modules</argument>
                                <argument>com.sun.xml.bind,com.sun.tools.xjc,com.sun.tools.jxc</argument>
                                <!--<argument>-jar</argument>
                                <argument>${project.build.directory}/jaxb-ri-client-1.0-SNAPSHOT.jar</argument>-->
                                <argument>com.oracle.jaxb.riclient.App</argument>
                                <!--<argument>&#45;&#45;list-modules</argument>-->
                            </arguments>
                            <longModulepath>false</longModulepath>
                        </configuration>
                    </execution>
                    <execution>
                        <id>xjc</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>--upgrade-module-path</argument>
                                <argument>${project.build.directory}/mods/jaxb-ri/mod/jaxb-api.jar</argument>
                                <argument>--module-path</argument> <!-- or -p  -->
                                <argument>
                                    ${project.build.directory}/mods/jaxb-ri/mod:${project.build.directory}/mods/jaxb-ri/lib
                                </argument>
                                <argument>-m</argument>
                                <argument>com.sun.tools.xjc/com.sun.tools.xjc.XJCFacade</argument>
                                <argument>-p</argument>
                                <argument>com.oracle.metrojpms</argument>
                                <argument>-d</argument>
                                <argument>${project.build.directory}/generated-sources</argument>
                                <argument>${project.build.directory}/classes/schema.xsd</argument>
                            </arguments>
                            <longModulepath>false</longModulepath>
                        </configuration>
                    </execution>
                    <execution>
                        <id>jxc</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <!--<argument>-Xdebug</argument>
                                <argument>-Xrunjdwp:server=y,transport=dt_socket,address=4000,suspend=y</argument>-->
                                <argument>--upgrade-module-path</argument>
                                <argument>${project.build.directory}/mods/jaxb-ri/mod/jaxb-api.jar</argument>
                                <argument>--module-path</argument> <!-- or -p  -->
                                <argument>
                                    ${project.build.directory}/mods/jaxb-ri/mod:${project.build.directory}/mods/jaxb-ri/lib
                                </argument>
                                <argument>--add-modules</argument>
                                <argument>com.sun.tools.jxc,relaxngDatatype</argument>
                                <argument>-m</argument>
                                <argument>com.sun.tools.jxc/com.sun.tools.jxc.SchemaGeneratorFacade</argument>
                                <argument>-d</argument>
                                <argument>${project.build.directory}/generated-sources</argument>
                                <argument>${project.build.directory}/classes/com/oracle/metrojpms/Author.java</argument>
                                <argument>${project.build.directory}/classes/com/oracle/metrojpms/Book.java</argument>
                            </arguments>
                            <longModulepath>false</longModulepath>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
